gitops/platform-tools/cluster-dashboard/cluster-dashboard-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cluster-dashboard-route
  namespace: platform-tools
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: moto-lab-gateway # El nombre de tu Gateway de Envoy instalado por Helm
      namespace: envoy-gateway-system
  hostnames:
    - "dashboard.moto-lab.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cluster-dashboard-svc
          port: 8080
